feat: simplify configuration options (#27)
